Fix wrapping of long repository names

--- a/packages/omaha-web/src/app/styles/layout/header/repo_picker.scss
+++ b/packages/omaha-web/src/app/styles/layout/header/repo_picker.scss
@@ -105,6 +105,7 @@
 
 						.repo-name {
 							color: #929292;
+							white-space: nowrap;
 						}
 
 						.sep {
